Fix some issues with ZeroClipboard; modify ZeroClipboard library to always attach to window.ZeroClipboard even when host domain is using AMD or CommonJS; change z-index of bookmarklet to go underneath the clipboard layer

--- a/public/stylesheets/bookmarklet.css
+++ b/public/stylesheets/bookmarklet.css
@@ -13,7 +13,8 @@
 
   box-shadow: -5px -5px 5px #999, -5px 5px 5px #999;
   
-  z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999999999;
+/* Must be less than #global-zerclipboard-html-bridge which is z-index: 999999999*/
+  z-index: 999998;
 }
 
 /*.bkml-container > * {
